--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,26 +1,30 @@
 name: Deploy MFE @shoppe/app-header
 
-on: 
-  push: 
-    branches: 
+on:
+  push:
+    branches:
       - main
-  
-jobs: 
-  build: 
+
+jobs:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    steps: 
+    steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 16
       - name: Install
         run: yarn install
       - name: Build
         run: yarn build
+      - name: Bump Version
+        run: yarn semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Set AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with: 
+        with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
